Parser.output
Terminals unused in grammar

   PERIOD
   FOR
   LOOP
   OBJ


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | block

    3 block: statement
    4      | block statement

    5 instructions: declaration

    6 declaration: declarationList COLON TYPE
    7            | declarationList COLON TYPE ASSIGN expression
    8            | declarationList COLON TYPE ARRLEFT ARRRIGHT
    9            | declarationList COLON TYPE ARRLEFT ARRRIGHT ASSIGN ARRLEFT arrayValues ARRRIGHT

   10 arrayValues: expression
   11            | expression COMMA arrayValues

   12 declarationList: ID
   13                | ID COMMA declarationList

   14 expression: ID
   15           | NR
   16           | ID ARRLEFT NR ARRRIGHT
   17           | expression MINUS expression
   18           | expression PLUS expression
   19           | expression MUL expression
   20           | expression DIV expression
   21           | LEFT expression RIGHT
   22           | expression GREATER expression
   23           | expression LESS expression
   24           | expression EQL expression
   25           | expression LEQ expression
   26           | expression GREQ expression
   27           | expression NEQ expression
   28           | expression OR expression
   29           | expression AND expression
   30           | NOT expression

   31 statement: instructions SEMICOLON
   32          | IF LEFT expression RIGHT LEFT_BRACKET block RIGHT_BRACKET
   33          | WHILE LEFT expression RIGHT LEFT_BRACKET block RIGHT_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
NR (258) 15 16
ID (259) 12 13 14 16
PERIOD (260)
COMMA (261) 11 13
LEFT_BRACKET (262) 32 33
RIGHT_BRACKET (263) 32 33
ASSIGN (264) 7 9
IF (265) 32
WHILE (266) 33
FOR (267)
LOOP (268)
OBJ (269)
PLUS (270) 18
MINUS (271) 17
MUL (272) 19
DIV (273) 20
LEFT (274) 21 32 33
RIGHT (275) 21 32 33
ARRLEFT (276) 8 9 16
ARRRIGHT (277) 8 9 16
AND (278) 29
LESS (279) 23
LEQ (280) 25
EQL (281) 24
GREATER (282) 22
GREQ (283) 26
OR (284) 28
NOT (285) 30
NEQ (286) 27
SEMICOLON (287) 31
COLON (288) 6 7 8 9
TYPE (289) 6 7 8 9


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1 2, on right: 0
block (37)
    on left: 3 4, on right: 2 4 32 33
instructions (38)
    on left: 5, on right: 31
declaration (39)
    on left: 6 7 8 9, on right: 5
arrayValues (40)
    on left: 10 11, on right: 9 11
declarationList (41)
    on left: 12 13, on right: 6 7 8 9 13
expression (42)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30, on right:
    7 10 11 17 18 19 20 21 22 23 24 25 26 27 28 29 30 32 33
statement (43)
    on left: 31 32 33, on right: 3 4


State 0

    0 $accept: . program $end

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    $default  reduce using rule 1 (program)

    program          go to state 4
    block            go to state 5
    instructions     go to state 6
    declaration      go to state 7
    declarationList  go to state 8
    statement        go to state 9


State 1

   12 declarationList: ID .
   13                | ID . COMMA declarationList

    COMMA  shift, and go to state 10

    $default  reduce using rule 12 (declarationList)


State 2

   32 statement: IF . LEFT expression RIGHT LEFT_BRACKET block RIGHT_BRACKET

    LEFT  shift, and go to state 11


State 3

   33 statement: WHILE . LEFT expression RIGHT LEFT_BRACKET block RIGHT_BRACKET

    LEFT  shift, and go to state 12


State 4

    0 $accept: program . $end

    $end  shift, and go to state 13


State 5

    2 program: block .
    4 block: block . statement

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    $default  reduce using rule 2 (program)

    instructions     go to state 6
    declaration      go to state 7
    declarationList  go to state 8
    statement        go to state 14


State 6

   31 statement: instructions . SEMICOLON

    SEMICOLON  shift, and go to state 15


State 7

    5 instructions: declaration .

    $default  reduce using rule 5 (instructions)


State 8

    6 declaration: declarationList . COLON TYPE
    7            | declarationList . COLON TYPE ASSIGN expression
    8            | declarationList . COLON TYPE ARRLEFT ARRRIGHT
    9            | declarationList . COLON TYPE ARRLEFT ARRRIGHT ASSIGN ARRLEFT arrayValues ARRRIGHT

    COLON  shift, and go to state 16


State 9

    3 block: statement .

    $default  reduce using rule 3 (block)


State 10

   13 declarationList: ID COMMA . declarationList

    ID  shift, and go to state 1

    declarationList  go to state 17


State 11

   32 statement: IF LEFT . expression RIGHT LEFT_BRACKET block RIGHT_BRACKET

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 22


State 12

   33 statement: WHILE LEFT . expression RIGHT LEFT_BRACKET block RIGHT_BRACKET

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 23


State 13

    0 $accept: program $end .

    $default  accept


State 14

    4 block: block statement .

    $default  reduce using rule 4 (block)


State 15

   31 statement: instructions SEMICOLON .

    $default  reduce using rule 31 (statement)


State 16

    6 declaration: declarationList COLON . TYPE
    7            | declarationList COLON . TYPE ASSIGN expression
    8            | declarationList COLON . TYPE ARRLEFT ARRRIGHT
    9            | declarationList COLON . TYPE ARRLEFT ARRRIGHT ASSIGN ARRLEFT arrayValues ARRRIGHT

    TYPE  shift, and go to state 24


State 17

   13 declarationList: ID COMMA declarationList .

    $default  reduce using rule 13 (declarationList)


State 18

   15 expression: NR .

    $default  reduce using rule 15 (expression)


State 19

   14 expression: ID .
   16           | ID . ARRLEFT NR ARRRIGHT

    ARRLEFT  shift, and go to state 25

    $default  reduce using rule 14 (expression)


State 20

   21 expression: LEFT . expression RIGHT

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 26


State 21

   30 expression: NOT . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 27


State 22

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression
   32 statement: IF LEFT expression . RIGHT LEFT_BRACKET block RIGHT_BRACKET

    PLUS     shift, and go to state 28
    MINUS    shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    RIGHT    shift, and go to state 32
    AND      shift, and go to state 33
    LESS     shift, and go to state 34
    LEQ      shift, and go to state 35
    EQL      shift, and go to state 36
    GREATER  shift, and go to state 37
    GREQ     shift, and go to state 38
    OR       shift, and go to state 39
    NEQ      shift, and go to state 40


State 23

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression
   33 statement: WHILE LEFT expression . RIGHT LEFT_BRACKET block RIGHT_BRACKET

    PLUS     shift, and go to state 28
    MINUS    shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    RIGHT    shift, and go to state 41
    AND      shift, and go to state 33
    LESS     shift, and go to state 34
    LEQ      shift, and go to state 35
    EQL      shift, and go to state 36
    GREATER  shift, and go to state 37
    GREQ     shift, and go to state 38
    OR       shift, and go to state 39
    NEQ      shift, and go to state 40


State 24

    6 declaration: declarationList COLON TYPE .
    7            | declarationList COLON TYPE . ASSIGN expression
    8            | declarationList COLON TYPE . ARRLEFT ARRRIGHT
    9            | declarationList COLON TYPE . ARRLEFT ARRRIGHT ASSIGN ARRLEFT arrayValues ARRRIGHT

    ASSIGN   shift, and go to state 42
    ARRLEFT  shift, and go to state 43

    $default  reduce using rule 6 (declaration)


State 25

   16 expression: ID ARRLEFT . NR ARRRIGHT

    NR  shift, and go to state 44


State 26

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   21           | LEFT expression . RIGHT
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    PLUS     shift, and go to state 28
    MINUS    shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    RIGHT    shift, and go to state 45
    AND      shift, and go to state 33
    LESS     shift, and go to state 34
    LEQ      shift, and go to state 35
    EQL      shift, and go to state 36
    GREATER  shift, and go to state 37
    GREQ     shift, and go to state 38
    OR       shift, and go to state 39
    NEQ      shift, and go to state 40


State 27

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression
   30           | NOT expression .

    $default  reduce using rule 30 (expression)


State 28

   18 expression: expression PLUS . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 46


State 29

   17 expression: expression MINUS . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 47


State 30

   19 expression: expression MUL . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 48


State 31

   20 expression: expression DIV . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 49


State 32

   32 statement: IF LEFT expression RIGHT . LEFT_BRACKET block RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 50


State 33

   29 expression: expression AND . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 51


State 34

   23 expression: expression LESS . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 52


State 35

   25 expression: expression LEQ . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 53


State 36

   24 expression: expression EQL . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 54


State 37

   22 expression: expression GREATER . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 55


State 38

   26 expression: expression GREQ . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 56


State 39

   28 expression: expression OR . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 57


State 40

   27 expression: expression NEQ . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 58


State 41

   33 statement: WHILE LEFT expression RIGHT . LEFT_BRACKET block RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 59


State 42

    7 declaration: declarationList COLON TYPE ASSIGN . expression

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    expression  go to state 60


State 43

    8 declaration: declarationList COLON TYPE ARRLEFT . ARRRIGHT
    9            | declarationList COLON TYPE ARRLEFT . ARRRIGHT ASSIGN ARRLEFT arrayValues ARRRIGHT

    ARRRIGHT  shift, and go to state 61


State 44

   16 expression: ID ARRLEFT NR . ARRRIGHT

    ARRRIGHT  shift, and go to state 62


State 45

   21 expression: LEFT expression RIGHT .

    $default  reduce using rule 21 (expression)


State 46

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   18           | expression PLUS expression .
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    MUL  shift, and go to state 30
    DIV  shift, and go to state 31

    $default  reduce using rule 18 (expression)


State 47

   17 expression: expression . MINUS expression
   17           | expression MINUS expression .
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    MUL  shift, and go to state 30
    DIV  shift, and go to state 31

    $default  reduce using rule 17 (expression)


State 48

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   19           | expression MUL expression .
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    $default  reduce using rule 19 (expression)


State 49

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   20           | expression DIV expression .
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    $default  reduce using rule 20 (expression)


State 50

   32 statement: IF LEFT expression RIGHT LEFT_BRACKET . block RIGHT_BRACKET

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    block            go to state 63
    instructions     go to state 6
    declaration      go to state 7
    declarationList  go to state 8
    statement        go to state 9


State 51

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression
   29           | expression AND expression .

    PLUS     shift, and go to state 28
    MINUS    shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    LESS     shift, and go to state 34
    LEQ      shift, and go to state 35
    EQL      shift, and go to state 36
    GREATER  shift, and go to state 37
    GREQ     shift, and go to state 38
    NEQ      shift, and go to state 40

    $default  reduce using rule 29 (expression)


State 52

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   23           | expression LESS expression .
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MUL    shift, and go to state 30
    DIV    shift, and go to state 31

    $default  reduce using rule 23 (expression)


State 53

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   25           | expression LEQ expression .
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MUL    shift, and go to state 30
    DIV    shift, and go to state 31

    $default  reduce using rule 25 (expression)


State 54

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   24           | expression EQL expression .
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MUL    shift, and go to state 30
    DIV    shift, and go to state 31

    $default  reduce using rule 24 (expression)


State 55

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   22           | expression GREATER expression .
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MUL    shift, and go to state 30
    DIV    shift, and go to state 31

    $default  reduce using rule 22 (expression)


State 56

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   26           | expression GREQ expression .
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MUL    shift, and go to state 30
    DIV    shift, and go to state 31

    $default  reduce using rule 26 (expression)


State 57

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   28           | expression OR expression .
   29           | expression . AND expression

    PLUS     shift, and go to state 28
    MINUS    shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    LESS     shift, and go to state 34
    LEQ      shift, and go to state 35
    EQL      shift, and go to state 36
    GREATER  shift, and go to state 37
    GREQ     shift, and go to state 38
    NEQ      shift, and go to state 40

    $default  reduce using rule 28 (expression)


State 58

   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   27           | expression NEQ expression .
   28           | expression . OR expression
   29           | expression . AND expression

    PLUS   shift, and go to state 28
    MINUS  shift, and go to state 29
    MUL    shift, and go to state 30
    DIV    shift, and go to state 31

    $default  reduce using rule 27 (expression)


State 59

   33 statement: WHILE LEFT expression RIGHT LEFT_BRACKET . block RIGHT_BRACKET

    ID     shift, and go to state 1
    IF     shift, and go to state 2
    WHILE  shift, and go to state 3

    block            go to state 64
    instructions     go to state 6
    declaration      go to state 7
    declarationList  go to state 8
    statement        go to state 9


State 60

    7 declaration: declarationList COLON TYPE ASSIGN expression .
   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    PLUS     shift, and go to state 28
    MINUS    shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    AND      shift, and go to state 33
    LESS     shift, and go to state 34
    LEQ      shift, and go to state 35
    EQL      shift, and go to state 36
    GREATER  shift, and go to state 37
    GREQ     shift, and go to state 38
    OR       shift, and go to state 39
    NEQ      shift, and go to state 40

    $default  reduce using rule 7 (declaration)


State 61

    8 declaration: declarationList COLON TYPE ARRLEFT ARRRIGHT .
    9            | declarationList COLON TYPE ARRLEFT ARRRIGHT . ASSIGN ARRLEFT arrayValues ARRRIGHT

    ASSIGN  shift, and go to state 65

    $default  reduce using rule 8 (declaration)


State 62

   16 expression: ID ARRLEFT NR ARRRIGHT .

    $default  reduce using rule 16 (expression)


State 63

    4 block: block . statement
   32 statement: IF LEFT expression RIGHT LEFT_BRACKET block . RIGHT_BRACKET

    ID             shift, and go to state 1
    RIGHT_BRACKET  shift, and go to state 66
    IF             shift, and go to state 2
    WHILE          shift, and go to state 3

    instructions     go to state 6
    declaration      go to state 7
    declarationList  go to state 8
    statement        go to state 14


State 64

    4 block: block . statement
   33 statement: WHILE LEFT expression RIGHT LEFT_BRACKET block . RIGHT_BRACKET

    ID             shift, and go to state 1
    RIGHT_BRACKET  shift, and go to state 67
    IF             shift, and go to state 2
    WHILE          shift, and go to state 3

    instructions     go to state 6
    declaration      go to state 7
    declarationList  go to state 8
    statement        go to state 14


State 65

    9 declaration: declarationList COLON TYPE ARRLEFT ARRRIGHT ASSIGN . ARRLEFT arrayValues ARRRIGHT

    ARRLEFT  shift, and go to state 68


State 66

   32 statement: IF LEFT expression RIGHT LEFT_BRACKET block RIGHT_BRACKET .

    $default  reduce using rule 32 (statement)


State 67

   33 statement: WHILE LEFT expression RIGHT LEFT_BRACKET block RIGHT_BRACKET .

    $default  reduce using rule 33 (statement)


State 68

    9 declaration: declarationList COLON TYPE ARRLEFT ARRRIGHT ASSIGN ARRLEFT . arrayValues ARRRIGHT

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    arrayValues  go to state 69
    expression   go to state 70


State 69

    9 declaration: declarationList COLON TYPE ARRLEFT ARRRIGHT ASSIGN ARRLEFT arrayValues . ARRRIGHT

    ARRRIGHT  shift, and go to state 71


State 70

   10 arrayValues: expression .
   11            | expression . COMMA arrayValues
   17 expression: expression . MINUS expression
   18           | expression . PLUS expression
   19           | expression . MUL expression
   20           | expression . DIV expression
   22           | expression . GREATER expression
   23           | expression . LESS expression
   24           | expression . EQL expression
   25           | expression . LEQ expression
   26           | expression . GREQ expression
   27           | expression . NEQ expression
   28           | expression . OR expression
   29           | expression . AND expression

    COMMA    shift, and go to state 72
    PLUS     shift, and go to state 28
    MINUS    shift, and go to state 29
    MUL      shift, and go to state 30
    DIV      shift, and go to state 31
    AND      shift, and go to state 33
    LESS     shift, and go to state 34
    LEQ      shift, and go to state 35
    EQL      shift, and go to state 36
    GREATER  shift, and go to state 37
    GREQ     shift, and go to state 38
    OR       shift, and go to state 39
    NEQ      shift, and go to state 40

    $default  reduce using rule 10 (arrayValues)


State 71

    9 declaration: declarationList COLON TYPE ARRLEFT ARRRIGHT ASSIGN ARRLEFT arrayValues ARRRIGHT .

    $default  reduce using rule 9 (declaration)


State 72

   11 arrayValues: expression COMMA . arrayValues

    NR    shift, and go to state 18
    ID    shift, and go to state 19
    LEFT  shift, and go to state 20
    NOT   shift, and go to state 21

    arrayValues  go to state 73
    expression   go to state 70


State 73

   11 arrayValues: expression COMMA arrayValues .

    $default  reduce using rule 11 (arrayValues)
